force-app/main/default/objects/CJFW_PurchaseStatus__c/CJFW_PurchaseStatus__c.object-meta.xml
<CustomObject>
    <description>[P2] 매출채권 - 매입현황</description>
    <label>매입현황</label>
    <nameField>
        <displayFormat>PS{YYYYMMDD}{0000}</displayFormat>
        <label>Purchase Status No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>