force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/AccumulateSetoff__c.field-meta.xml
<CustomField>
    <fullName>AccumulateSetoff__c</fullName>
    <label>Accumulate Setoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>