force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/AveragePurchase__c.field-meta.xml
<CustomField>
    <fullName>AveragePurchase__c</fullName>
    <label>Average Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>