force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/CodeVendor__c.field-meta.xml
<CustomField>
    <fullName>CodeVendor__c</fullName>
    <formula>Vendor__r.CodeName__c</formula>
    <label>(Code)Vendor</label>
    <type>Text</type>
</CustomField>