force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/CreditRequest__c.field-meta.xml
<CustomField>
    <fullName>CreditRequest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Request</label>
    <referenceTo>CJFW_CreditRequest__c</referenceTo>
    <relationshipName>Purchase_Status</relationshipName>
    <type>Lookup</type>
</CustomField>