force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/CurrentPurchaseAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentPurchaseAmount__c</fullName>
    <label>Current Purchase Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>