force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/EstimatedPurchaseAmountforThisMonth__c.field-meta.xml
<CustomField>
    <fullName>EstimatedPurchaseAmountforThisMonth__c</fullName>
    <label>Estimated Purchase Amount for This Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>