force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/ExpectedSetoff__c.field-meta.xml
<CustomField>
    <fullName>ExpectedSetoff__c</fullName>
    <label>Expected Setoff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>