force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/PurcharseofMonthBeforeLast__c.field-meta.xml
<CustomField>
    <fullName>PurcharseofMonthBeforeLast__c</fullName>
    <label>Purchase of Month Before Last</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>