force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/PurchaseofLastMonth__c.field-meta.xml
<CustomField>
    <fullName>PurchaseofLastMonth__c</fullName>
    <label>Purchase of Last Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>