force-app/main/default/objects/CJFW_PurchaseStatus__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <referenceTo>CJFW_Vendor__c</referenceTo>
    <relationshipName>Purchase_Status</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>